<?xml version="1.0" encoding="utf-8"?>
<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth_connect"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/bluetooth_icon"
        android:id="@+id/action_enable"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth_enable"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth_close"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
