<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="root_screen">

    <PreferenceCategory
            android:title="常用">

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="tips_sound"
                android:summary=""
                android:title="提示音"/>


    </PreferenceCategory>

    <PreferenceCategory
            android:title="高级">

        <ListPreference
                android:key="sample"
                android:entries="@array/sample_list"
                android:entryValues="@array/sample_list"
                android:title="采样率"
                android:summary=""
                android:defaultValue="@string/sample_default"
                android:dialogTitle="采样率"/>
        <ListPreference
                android:key="vad"
                android:entries="@array/vad_list"
                android:entryValues="@array/vad_list"
                android:title="VAD"
                android:summary=""
                android:defaultValue="@string/vad_default"
                android:dialogTitle="VAD"/>
        <ListPreference
                android:key="language"
                android:entries="@array/language"
                android:entryValues="@array/language"
                android:title="语种"
                android:summary=""
                android:defaultValue="@string/language_default"
                android:dialogTitle="语种"/>

        <ListPreference
                android:key="prop"
                android:entries="@array/prop_tpye"
                android:entryValues="@array/prop_tpye"
                android:title="垂直领域"
                android:summary=""
                android:defaultValue="@string/prop_default"
                android:dialogTitle="垂直领域"/>

    </PreferenceCategory>
</PreferenceScreen>